Phase 2 of 9.08 release
git-svn-id: svn://svn.savannah.gnu.org/electric/trunk@294 b905213a-9962-419e-bd63-4c908b0646d6